modulo core iniciado